added more color variants

--- a/Stylesheets/color.css
+++ b/Stylesheets/color.css
@@ -1,14 +1,20 @@
 :root {
     --color-primary: #0D1321;
+    --color-primary-light: #0d132181;
     --color-secondary: #1D2D44;
+    --color-secondary-light: #1d2d44ab;
     --color-accent: #3E5C76;
+    --color-accent-light: #3e5c76e1;
     --color-tertiary: #748CAB;
-    --color-tertiary-variant: #748cabb4;
-    --color-background-primary: #f0ebd896;
+    --color-tertiary-light: #748cab93;
+    --color-tertiary-variant1: #748cabb4;
+    --color-tertiary-variant2: #748cab91;
+    --color-background-variant: #f0ebd8;
+    --color-background-primary: #f0ebd852;
     --color-error: #ae20297e;
-    --color-error-icon: #691419;
+    --color-error-dark: #691419;
     --color-warning: #f674178c;
-    --color-warning-icon: #994101;
-    --color-success-icon: #295a40;
-    --color-success: #58b98493;
+    --color-warning-dark: #994101;
+    --color-success-dark: #295a40;
+    --color-success: #58b984ad;
 }
