--- a/Stylesheets/reset.css
+++ b/Stylesheets/reset.css
@@ -13,7 +13,7 @@
 img, picture, video, canvas, iframe, svg {
   display: block;
   max-width: 100%;
-  margin: 0 auto;
+  margin: 0 1rem;
 }
 
 /* Remove built-in form typography styles */
