--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -3,3 +3,4 @@
 @import url(./typography.css);
 @import url(./utility.css);
 @import url(./Components/alert.css);
+@import url(./Components/avatar.css);
