--- a/Stylesheets/Components/badge.css
+++ b/Stylesheets/Components/badge.css
@@ -3,3 +3,106 @@
     height: fit-content;
     position: relative;
 }
+
+.avatar-badge-container .avatar-container, 
+.avatar-badge-container img {
+    margin:0;
+}
+
+.badge {
+    border-radius: var(--circle-border);
+    position:absolute;
+    right:0;
+    bottom:0;
+    z-index: 9;
+    box-shadow: var(--badge-shadow)
+}
+
+.squircle + .badge {
+    right: -0.5rem;
+    bottom: -0.5rem;
+}
+
+.squircle.xsmall + .badge {
+    right: -0.2rem;
+    bottom: -0.2rem;
+}
+
+.squircle.large + .badge {
+    right: -0.3rem;
+    bottom: -0.3rem;
+}
+
+.xsmall + .badge {
+    width: 1rem;
+    height: 1rem;
+    border: 3px solid white;
+} 
+
+.small + .badge {
+    width: 1.5rem;
+    height: 1.5rem;
+    border: 4px solid white;
+} 
+
+.large + .badge {
+    width: 2rem;
+    height: 2rem;
+    border: 5px solid white;
+} 
+
+.xlarge + .badge {
+    width: 3rem;
+    height: 3rem;
+    border: 6px solid #FAF8F2;
+} 
+
+.badge.online {
+    background-color:var(--color-success-solid);
+}
+
+.badge.offline {
+    background-color: var(--color-offline);
+}
+
+.badge.dnd {
+    background-color: var(--color-error-solid);
+}
+
+.badge.notification {
+    top:0;
+    border: none;
+    width : 1.5rem;
+    height: 1.5rem;
+    background-color: var(--color-bright-red);
+    color: white;
+    font-weight: 700;
+}
+
+.badge.notification.text {
+    top: -0.7rem;
+    right:-0.7rem;
+}
+
+.notification.text.large {
+    top: -1.2rem;
+    right:-1rem;
+    width : 2rem;
+    height: 2rem;
+}
+
+
+.avatar-badge-container:active .badge.notification{
+    box-shadow: none;
+    top:1px;
+}
+
+.badge.notification + .solid-icon-only, .badge.notification + .outline-icon-only {
+    padding:0;
+}
+
+.badge.notification + .solid-icon-only img, .badge.notification + .outline-icon-only img{
+    width:2rem;
+    height:2rem;
+    margin:0.5rem;
+}
