--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -3,5 +3,6 @@
 @import url(./typography.css);
 @import url(./utility.css);
 @import url(./Components/alert.css);
-@import url(./Components/avatar.css)
+@import url(./Components/avatar.css);
 @import url(./Components/button.css);
+@import url(./Components/badge.css);
