refactor: code format

--- a/Stylesheets/utility.css
+++ b/Stylesheets/utility.css
@@ -6,7 +6,6 @@
     --circle-border: 100%;
     --squircle-border: 1rem;
     --button-border: 0.5rem;
-    --button-border: 0.5rem;
 
     /* transitions */
     --hover : 0.5s;
@@ -25,7 +24,7 @@
 
     /* box-shadow */
     --button-shadow:  0 0 5px 1px rgba(0, 0, 0, 0.39);
-    --button-shadow-hover:  0 0 5px 1px rgba(0, 0, 0, 0.623)
+    --button-shadow-hover:  0 0 5px 1px rgba(0, 0, 0, 0.623);
     --icon-shadow: 0 5px 10px 1px grey;
 }
 
