--- a/Stylesheets/utility.css
+++ b/Stylesheets/utility.css
@@ -26,6 +26,7 @@
     --button-shadow:  0 0 5px 1px rgba(0, 0, 0, 0.39);
     --button-shadow-hover:  0 0 5px 1px rgba(0, 0, 0, 0.623);
     --icon-shadow: 0 5px 10px 1px grey;
+    --badge-shadow: 2px 3px 5px -1px rgba(128, 128, 128, 0.876);
 }
 
 body {
