--- a/Stylesheets/Components/badge.css
+++ b/Stylesheets/Components/badge.css
@@ -36,25 +36,25 @@
 .xsmall + .badge {
     width: 1rem;
     height: 1rem;
-    border: 3px solid white;
+    border: 3px solid var(--color-white);
 } 
 
 .small + .badge {
     width: 1.5rem;
     height: 1.5rem;
-    border: 4px solid white;
+    border: 4px solid var(--color-white);
 } 
 
 .large + .badge {
     width: 2rem;
     height: 2rem;
-    border: 5px solid white;
+    border: 5px solid var(--color-white);
 } 
 
 .xlarge + .badge {
     width: 3rem;
     height: 3rem;
-    border: 6px solid #FAF8F2;
+    border: 6px solid var(--color-white);
 } 
 
 .badge.online {
@@ -75,7 +75,7 @@
     width : 1.5rem;
     height: 1.5rem;
     background-color: var(--color-bright-red);
-    color: white;
+    color: var(--color-white);
     font-weight: 700;
 }
 
