--- a/Stylesheets/Components/input.css
+++ b/Stylesheets/Components/input.css
@@ -1,12 +1,12 @@
 .input-box {
     padding: 0.5rem;
-    display:flex;
+    display: flex;
     flex-direction: column;
-    /* border:1px solid red; */
     color: var(--color-primary);
 }
 
-.input-box input, .input-box textarea {
+.input-box input,
+.input-box textarea {
     font-size: 1.2rem;
     padding: 1rem;
     border: 2px solid var(--color-primary);
@@ -19,16 +19,18 @@ textarea {
     resize: none;
 }
 
-input::placeholder, textarea::placeholder {
+input::placeholder,
+textarea::placeholder {
     color: var(--color-secondary-light);
 }
 
 .input-box small {
-    margin:5px 0;
+    margin: 5px 0;
     font-size: 1rem;
 }
 
-.error input,.error textarea {
+.error input,
+.error textarea {
     border-color: var(--color-error-dark);
 }
 
@@ -38,7 +40,7 @@ input::placeholder, textarea::placeholder {
 
 .input-icon-container {
     background-color: var(--color-tertiary-variant2);
-    display:flex;
+    display: flex;
     flex-direction: row;
     border-radius: var(--container-border);
     border: 2px solid var(--color-primary);
@@ -46,13 +48,46 @@ input::placeholder, textarea::placeholder {
 
 .input-icon-container input {
     background-color: var(--color-reset);
-    border:none;
+    border: none;
 }
 
 .input-icon-container img {
-    width:1.8rem
+    width: 1.8rem
 }
 
 .character-count {
-    width:fit-content;
+    width: fit-content;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+    width: 1.2rem;
+    height: 1.2rem;
+    accent-color: var(--color-secondary-light);
+}
+
+.option-holder {
+    margin: 1rem 0;
+}
+
+.character-count.functional {
+    display: none;
+}
+
+.char-count-check:checked~.input-box .functional {
+    display: flex;
+}
+
+label {
+    margin: 0 0.5rem;
+    font-size: 1.2rem;
+}
+
+.leading-icon-control:checked~.input-box img {
+    display: flex;
+    order: -1;
+}
+
+.input-box .input-icon-container.trailing-icon img {
+    order: 2;
 }
