--- a/Stylesheets/Components/input.css
+++ b/Stylesheets/Components/input.css
@@ -1,7 +1,5 @@
 .input-box {
     padding: 0.5rem;
-    display: flex;
-    flex-direction: column;
     color: var(--color-primary);
 }
 
@@ -11,7 +9,8 @@
     padding: 1rem;
     border: 2px solid var(--color-primary);
     border-radius: var(--container-border);
-    background-color: var(--color-tertiary-variant2);
+    --tertiary-color: 214, 25%, 56%;
+    background-color: hsla(var(--tertiary-color),0.1);
     outline: none;
 }
 
@@ -39,7 +38,8 @@ textarea::placeholder {
 }
 
 .input-icon-container {
-    background-color: var(--color-tertiary-variant2);
+    --tertiary-color: 214, 25%, 56%;
+    background-color: hsla(var(--tertiary-color),0.1);
     display: flex;
     flex-direction: row;
     border-radius: var(--container-border);
