imported images.css

--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -7,3 +7,4 @@
 @import url(./Components/button.css);
 @import url(./Components/badge.css);
 @import url(./Components/input.css);
+@import url(./Components/images.css);
