--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -8,3 +8,5 @@
 @import url(./Components/badge.css);
 @import url(./Components/input.css);
 @import url(./Components/images.css);
+
+@import url(./Components/card.css);
