--- a/Stylesheets/utility.css
+++ b/Stylesheets/utility.css
@@ -27,6 +27,7 @@
     --button-shadow-hover:  0 0 5px 1px rgba(0, 0, 0, 0.623);
     --icon-shadow: 0 5px 10px 1px grey;
     --badge-shadow: 2px 3px 5px -1px rgba(128, 128, 128, 0.876);
+    --card-box-shadow: 0 0 20px -1px rgba(128, 128, 128, 0.39);
 }
 
 body {
