--- a/Stylesheets/color.css
+++ b/Stylesheets/color.css
@@ -5,10 +5,11 @@
     --color-secondary-light: #1d2d44ab;
     --color-accent: #3E5C76;
     --color-accent-light: #3e5c76e1;
-    --color-tertiary: #748CAB;
+    --color-tertiary: #748cab;
     --color-tertiary-light: #748cab93;
     --color-tertiary-variant1: #748cabb4;
     --color-tertiary-variant2: #748cab91;
+    --color-bright-blue:#cfe4ff;
     --color-background-variant: #f0ebd8;
     --color-background-primary: #f0ebd852;
     --color-error: #ae20297e;
@@ -22,5 +23,6 @@
     --color-offline: #808080cc;
     --color-white: white;
     --color-bright-red: #ff0000da;
+    --color-gray: #333333;
     --color-reset: #ffffff00;
 }
