created new box-shadow variable

--- a/Stylesheets/utility.css
+++ b/Stylesheets/utility.css
@@ -28,6 +28,7 @@
     --icon-shadow: 0 5px 10px 1px grey;
     --badge-shadow: 2px 3px 5px -1px rgba(128, 128, 128, 0.876);
     --card-box-shadow: 0 0 20px -1px rgba(128, 128, 128, 0.39);
+    --snackbar-shadow: 0 0 8px rgb(78, 73, 73);
 }
 
 body {
