--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -10,3 +10,4 @@
 @import url(./Components/images.css);
 @import url(./Components/card.css);
 @import url(./Components/snackbar.css);
+@import url(./Components/ratings.css);
