--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -11,3 +11,4 @@
 @import url(./Components/card.css);
 @import url(./Components/snackbar.css);
 @import url(./Components/ratings.css);
+@import url(./Components/simple-grid.css);
