fix: missing bracket

--- a/Stylesheets/Components/alert.css
+++ b/Stylesheets/Components/alert.css
@@ -24,6 +24,7 @@ body {
 
 .alert-content .icon {
     marging-right:1rem;
+}
 
 .alert-box.primary {
     background-color: var(  --color-tertiary-variant);
