added tertiary color variant

--- a/Stylesheets/color.css
+++ b/Stylesheets/color.css
@@ -7,6 +7,7 @@
     --color-accent-light: #3e5c76e1;
     --color-tertiary: #748cab;
     --color-tertiary-light: #748cab93;
+    --color-tertiary-variant:#9AABBD;
     --color-tertiary-variant1: #748cabb4;
     --color-tertiary-variant2: #748cab91;
     --color-bright-blue:#cfe4ff;
