--- a/Stylesheets/utility.css
+++ b/Stylesheets/utility.css
@@ -63,6 +63,10 @@ body {
     justify-content: space-between;
 }
 
+.display-align-self-flex-start{
+    align-self: flex-start;
+}
+
 .display-align-center{
     display:flex;
     align-items: center;
