--- a/Stylesheets/typography.css
+++ b/Stylesheets/typography.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
+@import url(/Stylesheets/color.css);
 
 * {
     font-family: 'Josefin Sans', sans-serif;
@@ -26,4 +27,8 @@ p {
 
 label, span {
     font-weight: 300;
+}
+
+.disabled {
+    color: var(--color-disabled)
 }
