--- a/Stylesheets/Components/input.css
+++ b/Stylesheets/Components/input.css
@@ -52,7 +52,8 @@ textarea::placeholder {
 }
 
 .input-icon-container img {
-    width: 1.8rem
+    width: 1.8rem;
+    margin:0 1rem;
 }
 
 .character-count {
