--- a/Stylesheets/Docs/docs.css
+++ b/Stylesheets/Docs/docs.css
@@ -155,6 +155,7 @@ aside {
 
 .demo-wrapper {
     padding: 1rem;
+    margin:0 auto;
 }
 
 .for-badge {
@@ -173,6 +174,14 @@ aside {
 
 .for-button {
     gap: 1rem;
+}
+
+.for-inputs {
+    width: 60%;
+}
+
+.for-inputs label {
+    font-weight: 500;
 }
 
 footer {
