--- a/Stylesheets/Docs/docs.css
+++ b/Stylesheets/Docs/docs.css
@@ -78,6 +78,11 @@ aside {
     z-index: 9;
     transform: translateX(-22rem);
     transition: transform .3s ease-in;
+    overflow-x: auto;
+}
+
+aside::-webkit-scrollbar {
+    display: none;
 }
 
 .aside-heading {
@@ -123,7 +128,7 @@ aside {
 }
 
 .component-heading{
-    font-size: 2.5rem;
+    /* font-size: 2.5rem; */
     padding-bottom: 1rem;
     font-weight: 700;
 }
@@ -147,8 +152,7 @@ aside {
 }
 
 .variant-name {
-    font-size: 1.5rem;
-   text-align: center;
+    text-align: center;
     font-weight: 700;
     padding: 1rem;
 }
@@ -156,6 +160,13 @@ aside {
 .demo-wrapper {
     padding: 1rem;
     margin:0 auto;
+    /* background-color: var(--color-white); */
+    border:1px solid rgba(128, 128, 128, 0.349);
+    border-radius: var(--container-border);
+}
+
+.for-typography {
+    color: var(--color-secondary)
 }
 
 .for-badge {
