created a class for display

--- a/Stylesheets/utility.css
+++ b/Stylesheets/utility.css
@@ -46,6 +46,11 @@ body {
     justify-content: space-evenly;
 }
 
+.display-justify-space-around {
+    display:flex;
+    justify-content: space-around;
+}
+
 .display-justify-center {
     display:flex;
     justify-content: center;
