created utility classes

--- a/Stylesheets/utility.css
+++ b/Stylesheets/utility.css
@@ -93,3 +93,10 @@ body {
 .strike-off {
     text-decoration:line-through;
 }
+
+.position-fixed {
+    position: fixed;
+    bottom:0;
+    left:0;
+    right:0;
+}
