added new media query
for responsiveness of snackbar-baseline in docs

--- a/Stylesheets/Docs/docs.css
+++ b/Stylesheets/Docs/docs.css
@@ -248,6 +248,12 @@ footer a:hover {
     text-decoration: underline;
 }
 
+@media (max-width: 1200px) {
+    .snackbars.baseline {
+        gap: 0;
+    }
+}
+
 @media (max-width:960px) {
     .main-container {
         width:80%;
