imported `navigation.css`

--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -12,3 +12,4 @@
 @import url(./Components/snackbar.css);
 @import url(./Components/ratings.css);
 @import url(./Components/simple-grid.css);
+@import url(./Components/navigation.css)
