--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -12,4 +12,5 @@
 @import url(./Components/snackbar.css);
 @import url(./Components/ratings.css);
 @import url(./Components/simple-grid.css);
-@import url(./Components/navigation.css)
+@import url(./Components/navigation.css);
+@import url(./Components/modal.css);
