--- a/Stylesheets/Docs/codeblocks/codeblocks.css
+++ b/Stylesheets/Docs/codeblocks/codeblocks.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500;600;800&display=swap');
+
 pre {
     position: relative;
 }
@@ -5,6 +7,10 @@ pre {
 code {
     font-size: 1.2rem;
     padding: 2rem;
+}
+
+code, code span {
+    font-family: 'Inconsolata', monospace;
 }
 
 .snippet-btn {
