imported `lists.css`

--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -13,3 +13,4 @@
 @import url(./Components/ratings.css);
 @import url(./Components/simple-grid.css);
 @import url(./Components/modal.css);
+@import url(./Components/lists.css);
